Always show more menu and edit pencil on FoC, avoid applying hover states on mobile.

--- a/scss/partials/_activity_card.scss
+++ b/scss/partials/_activity_card.scss
@@ -13,32 +13,34 @@ div.activity-card {
   }
 
   &:hover, &.dropdown-active {
-    box-shadow: 0 4px 10px 0 rgba(0,0,0,0.15);
+    @include big_web() {
+      box-shadow: 0 4px 10px 0 rgba(0,0,0,0.15);
 
-    div.activity-card-head.entry-card {
-      background-color: $carrot_light_gray_5;
-    }
-
-    div.activity-card-head div.activity-card-head-right {
-      div.activity-tag {
-        background-color: $carrot_light_gray_6;
+      div.activity-card-head.entry-card {
+        background-color: $carrot_light_gray_5;
       }
 
-      div.more-button {
-        button.more-ellipsis {
-          opacity: 0.8;
+      div.activity-card-head div.activity-card-head-right {
+        div.activity-tag {
+          background-color: $carrot_light_gray_6;
+        }
+
+        div.more-button {
+          button.more-ellipsis {
+            opacity: 0.8;
+          }
         }
       }
-    }
 
-    div.activity-card-footer {
-      button.post-edit {
-        opacity: 0.8;
-      }
+      div.activity-card-footer {
+        button.post-edit {
+          opacity: 0.8;
+        }
 
-      div.activity-share {
-        button.activity-share-bt {
-          opacity: 1;
+        div.activity-share {
+          button.activity-share-bt {
+            opacity: 1;
+          }
         }
       }
     }
@@ -231,8 +233,14 @@ div.activity-card {
           background-repeat: no-repeat;
           opacity: 0;
 
-          &:hover {
+          @include mobile() {
             opacity: 1;
+          }
+
+          @include big_web() {
+            &:hover {
+              opacity: 1;
+            }
           }
         }
 
@@ -288,8 +296,10 @@ div.activity-card {
               cursor: pointer;
               background-color: transparent;
 
-              &:hover {
-                background-color: rgba($carrot_light_gray_4, 0.2);
+              @include big_web() {
+                &:hover {
+                  background-color: rgba($carrot_light_gray_4, 0.2);
+                }
               }
             }
           }
@@ -469,8 +479,10 @@ div.activity-card {
             cursor: pointer;
             background-color: transparent;
 
-            &:hover {
-              background-color: rgba($carrot_light_gray_4, 0.2);
+            @include big_web() {
+              &:hover {
+                background-color: rgba($carrot_light_gray_4, 0.2);
+              }
             }
           }
         }
@@ -489,8 +501,14 @@ div.activity-card {
       background-repeat: no-repeat;
       opacity: 0;
 
-      &:hover {
+      @include mobile() {
         opacity: 1;
+      }
+
+      @include big_web() {
+        &:hover {
+          opacity: 1;
+        }
       }
     }
   }
